# boto-remora

./: .gitlab-ci.yml  Pipfile  README.md  pylintrc  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql.yml
examples/: List Regions.ipynb  pricing.ipynb
src/boto_remora/: __init__.py  exception.py
src/boto_remora/aws/: __init__.py  base.py  helper.py  main.py
src/boto_remora/pricing/: __init__.py  main.py
