# For setuptools configuration see https://setuptools.readthedocs.io.
[metadata]
name = boto_remora
author = Carlos Meza
author-email = carlos@digitalr00ts.com
description  = AWS boto3 helper.
description-content-type = text/plain
long_description = file: README.md
long_description_content_type = text/markdown
;url =
project_urls =
;    Bug Tracker =
    Source Code = https://gitlab.com/digitlar00ts/boto-remora
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords =
    digitalr00ts

[options]
include_package_data = True
install_requires =
    boto3
packages = find:
package_dir =
    = src
requires-python = >=3.7
setup_requires =
    setuptools_scm
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
;console_scripts =
